updated ordergen interval to double
Signed-off-by: Paul Balaji <paulmonish@gmail.com>

--- a/dissertation/report.tex
+++ b/dissertation/report.tex
@@ -1494,11 +1494,13 @@ In order to make use of such a priority queue to filter out the lowest value ord
 In the interests of comparing LLV with a more popular but well-performing algorithm, we also take a look at and implement \textit{Shortest Job First (SJF)} scheduling.
 
 \section{Least Lost Value}
-As described earlier, the concept of deliveries having a value that decreases with the time taken to complete it is inspired by the \textit{Time-Value of Data} model used in big data and business intelligence. Therefore when investigating methods of optimising our scheduler for profit, we looked at ways that big data jobs would be scheduled for optimal time-value of data.\\
+As described earlier, the concept of deliveries having a value that decreases with the time taken to complete it is inspired by the \textit{Time-Value of Data (TVD)} model used in big data and business intelligence. Therefore when investigating methods of optimising our scheduler for profit, we looked at ways that big data jobs would be scheduled for optimal time-value of data.\\
 
 Our quest for optimisations led to a meeting with a PhD student of our supervisor, Prof. Knottenbelt. The PhD student, Shireen Seakhoa-King, was working on a scheduling optimising tool for the Big Data use-case and was informed by our supervisor about the project described in this report. This opened communication channels to discuss her tool and its potential applications further.\\
 
 \subsection{Algorithm Overview}
+
+\subsection{Adapting LLV for Delivery Scheduling}
 
 \subsection{Early Results}
 
