--- a/dissertation/report.tex
+++ b/dissertation/report.tex
@@ -1503,11 +1503,30 @@ After multiple meetings it became clear that Shireen's tool was a TVD-based sche
 \subsection{Algorithm Overview}
 As the name suggests, this algorithm aims to schedule items according to the \textit{Net Lost Value} metric. The next request to be taken from the queue is always the element with the lowest net lost value. To compute this value, LLV considers both the \textit{Potential Gain Value (PGV)} for performing a request as well the \textit{Potential Loss Value (PLV)} by doing other jobs later.\\
 
-To calculate the \textit{Expected Value (EV)} of a job, its duration is modelled as a task duration distrubution in order to account for variance in execution times. This duration is then used to compute EV in a similar manner to what we have previously described with Time-Value Functions.\\
+To calculate the \textit{Expected Value (EV)} of a job, its duration is modelled as a task duration distrubution in order to account for variance in execution times. This duration is then used to compute EV in a similar manner to what we have previously described with Time-Value Functions.
+$$ EV(j_{i}, t_{c}) = \int_{t_{0}}^{\infty} V_{i}(t).f_{i}(t-t_{c})\ dt $$
 
-The PGV is therefore defined as the difference of value between processing a job now versus at a later time. The PLV is the sum of the lost value of all the other jobs that have not been selected.
+\clearpage
+The Potential Gain Value is therefore defined as the difference of value between processing a job now versus at a later time.
+$$ PLV(j_{i}) = \sum_{j_{k}\in J,\ k\neq i,\ k-1}^{n} (EV(j_{k},t_{c}) - EV(j_{k}, t_{c}+p)) $$
+
+The Potential Loss Value is defined as the sum of the lost value of all the other jobs that have not been selected.
+$$ PGV(j_{i}) = (EV(j_{k},t_{c}) - EV(j_{k}, t_{c}+\bar{p_{i}})) $$
+
+Once these have been computed, the Net Lost Value per delivery is defined as Potential Gain subtracted from the Potential Loss.
+$$ NLV(j_{i}) = PLV(j_{i}) - PGV(j_{i}) $$
+
+The NLV is then computed as above for all jobs wanting to be scheduled, and the next job to be scheduled is the one with the lowest NLV.
 
 \subsection{Adapting LLV for Delivery Scheduling}
+To adapt the LLV algorithm for our specific drone delivery use case, we must consider how to model the duration distribution and also how to evict elements from the request queue when it becomes full.
+
+\subsubsection{Duration Distribution}
+To simplify the problem and reduce the computation complexity of the scheduler, we opt out of modelling duration as a distribution. Instead, we simply treat the duration as a fixed value derived from the distance between the controller and the delivery destination.
+$$ estimated\ duration = \frac{distance\ to\ destination}{maximum\ drone\ speed} $$
+
+\subsubsection{Pre-Emption}
+
 
 \subsection{Early Results}
 
